# cscs

./: .gitignore  LICENSE  README.md  docker-compose.yml  schema.sql  setup_db.sh  setup_meili.sh  update_data.sh
backend/: .env.example  Cargo.toml
backend/src/: gemini.rs  main.rs
frontend/: .env.example  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
frontend/app/api/gemini/: route.ts
frontend/app/api/search/: route.ts
frontend/app/api/seo/: route.ts
frontend/app/api/v1/search/: route.ts
frontend/components/: gemini-panel.tsx  json-ld.tsx  site-footer.tsx
frontend/components/search/: bibtex-dialog.tsx  filter-sidebar.tsx  mobile-filter.tsx  result-card.tsx  result-list.tsx  scroll-to-top.tsx  search-header.tsx  search-input.tsx  search-tracker.tsx  stats-dialog.tsx  venue-filter-dialog.tsx
frontend/constants/: venue-categories.ts  venue-names.ts
frontend/context/: gemini-context.tsx
frontend/hooks/: use-search.ts
frontend/lib/: search-client.ts
parser/: .env.example  .gitignore  Cargo.toml
parser/src/: main.rs
sync/: .env.example  Cargo.toml
sync/src/: main.rs
