[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
dotenvy = "0.15.7"
meilisearch-sdk = "0.32.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
redis = { version = "0.27.0", features = ["tokio-comp"] }
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
md5 = "0.7.0"
futures = "0.3.31"
async-stream = "0.3.6"
bytes = "1.9.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
